[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/ui.png" type="Texture" id=1]
[ext_resource path="res://fonts/romulus.tres" type="DynamicFont" id=2]
[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://scripts/LargeButton.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 63, 45, 9 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 72, 45, 9 )
margin = Rect2( 0, 1, 0, 0 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 54, 45, 9 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 72, 45, 9 )

[node name="LargeButton" type="Node2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 4 )
isHandled = false
buttonIcon = 47

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 45.0
margin_bottom = 9.0
keep_pressed_outside = true
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
texture_disabled = SubResource( 4 )
expand = true

[node name="TextContainer" type="Node2D" parent="."]
position = Vector2( 10, 3.5 )
scale = Vector2( 0.6, 0.6 )

[node name="Label" type="Label" parent="TextContainer"]
margin_left = -1.0
margin_top = -9.0
margin_right = 53.0
margin_bottom = 11.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.141176, 0.192157, 0.215686, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Play"
align = 1
valign = 1
clip_text = true
uppercase = true

[node name="Icon" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
hframes = 6
vframes = 16
frame = 47

[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
